[package]
name = "centichain_keypair"
version = "2.1.2"
edition = "2021"
description = "Creation of key pair and signature of Centichain network"
license = "MIT"
repository = "https://github.com/mgharebaghi82/centichain_keypair.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = "32.0.0"
seed15 = "0.1.5"
bip39 = "2.0.0"