[package]
name = "centichain_keypair"
version = "4.0.6"
edition = "2021"
description = "Creation of key pair and signature of Centichain network"
license = "MIT"
repository = "https://github.com/mgharebaghi82/centichain_keypair.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = "38.0.0"
bip39 = "2.2.0"
rand = "0.9.2"